--- a/Make_namelist.ipynb
+++ b/Make_namelist.ipynb
@@ -281,7 +281,7 @@
     "                'noahlsm_timestep': 3600,\n",
     "                'deep_soil_temperature': -9 + 273.15,\n",
     "                'Soil_layer_thickness': soil_thickness.tolist(),\n",
-    "                'soil_temperature' : (np.zeros(len(soil_thickness)) - 264.15).tolist(),\n",
+    "                'soil_temperature' : (np.zeros(len(soil_thickness)) + 264.15).tolist(),\n",
     "                'soil_moisture' : (np.zeros(len(soil_thickness)) + 0.45).tolist(),\n",
     "                'soil_liquid' : (np.zeros(len(soil_thickness)) + 0.15).tolist()\n",
     "                }\n",
@@ -324,7 +324,7 @@
     "                                                                        input_data['surface_pressure'][i]/100,\n",
     "                                                                        input_data['shortwave_downward'][i],\n",
     "                                                                        input_data['longwave_downward'][i],\n",
-    "                                                                        input_data['precipitation'][i] / 1000.\n",
+    "                                                                        input_data['precipitation'][i]\n",
     "                                                                        ))\n",
     "\n",
     "fid.close()\n"
