--- a/Make_namelist.ipynb
+++ b/Make_namelist.ipynb
@@ -9,7 +9,11 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import f90nml, os, shutil, warnings, time\n",
+    "import f90nml\n",
+    "import os\n",
+    "import shutil\n",
+    "import warnings\n",
+    "import time\n",
     "import xarray as xr\n",
     "from datetime import timedelta\n",
     "import matplotlib.pyplot as plt\n",
@@ -26,29 +30,58 @@
    "source": [
     "def write_met_data(filename, input_data):\n",
     "\n",
-    "    fid = open(filename,'wt')\n",
+    "    fid = open(filename, \"wt\")\n",
     "\n",
-    "    fid.write('-'*130+'\\n')\n",
+    "    fid.write(\"-\" * 130 + \"\\n\")\n",
     "\n",
-    "    fid.write('{:^17s}|{:^12s}|{:^12s}|{:^10s}|{:^10s}|{:^11s}|{:^11s}|{:^15s}\\n'.format('date/time','windspeed','temperature','humidity','pressure','shortwave','longwave','precipitation'))\n",
+    "    fid.write(\n",
+    "        \"{:^17s}|{:^12s}|{:^12s}|{:^10s}|{:^10s}|{:^11s}|{:^11s}|{:^15s}\\n\".format(\n",
+    "            \"date/time\",\n",
+    "            \"windspeed\",\n",
+    "            \"temperature\",\n",
+    "            \"humidity\",\n",
+    "            \"pressure\",\n",
+    "            \"shortwave\",\n",
+    "            \"longwave\",\n",
+    "            \"precipitation\",\n",
+    "        )\n",
+    "    )\n",
     "\n",
-    "    fid.write('{:^17s}|{:^12s}|{:^12s}|{:^10s}|{:^10s}|{:^11s}|{:^11s}|{:^15s}\\n'.format('yyyy mm dd hh mi','m s{-1}','K',' %','Pa','W m{-2}','W m{-2}','mm d{-1}'))\n",
+    "    fid.write(\n",
+    "        \"{:^17s}|{:^12s}|{:^12s}|{:^10s}|{:^10s}|{:^11s}|{:^11s}|{:^15s}\\n\".format(\n",
+    "            \"yyyy mm dd hh mi\",\n",
+    "            \"m s{-1}\",\n",
+    "            \"K\",\n",
+    "            \" %\",\n",
+    "            \"Pa\",\n",
+    "            \"W m{-2}\",\n",
+    "            \"W m{-2}\",\n",
+    "            \"mm d{-1}\",\n",
+    "        )\n",
+    "    )\n",
     "\n",
-    "    fid.write('-'*130+'\\n')\n",
+    "    fid.write(\"-\" * 130 + \"\\n\")\n",
     "\n",
     "    for i, date0 in enumerate(input_data.index):\n",
-    "        \n",
+    "\n",
     "        # print(i, date0.year)\n",
-    "        \n",
-    "        fid.write('{:4d} {:02d} {:02d} {:02d} {:02d}  {:^12.3f} {:^12.3f} {:^10.3f} {:^10.1f} {:^11.3f} {:^11.3f} {:^15.2f}\\n'.format(date0.year, date0.month, date0.day, date0.hour, date0.minute, \n",
-    "                                                                        input_data['wind_speed'][i], \n",
-    "                                                                        input_data['air_temperature'][i],\n",
-    "                                                                        input_data['relative_humidity'][i],\n",
-    "                                                                        input_data['surface_pressure'][i],\n",
-    "                                                                        input_data['shortwave_downward'][i],\n",
-    "                                                                        input_data['longwave_downward'][i],\n",
-    "                                                                        input_data['precipitation'][i]\n",
-    "                                                                        ))\n",
+    "\n",
+    "        fid.write(\n",
+    "            \"{:4d} {:02d} {:02d} {:02d} {:02d}  {:^12.3f} {:^12.3f} {:^10.3f} {:^10.1f} {:^11.3f} {:^11.3f} {:^15.2f}\\n\".format(\n",
+    "                date0.year,\n",
+    "                date0.month,\n",
+    "                date0.day,\n",
+    "                date0.hour,\n",
+    "                date0.minute,\n",
+    "                input_data[\"wind_speed\"][i],\n",
+    "                input_data[\"air_temperature\"][i],\n",
+    "                input_data[\"relative_humidity\"][i],\n",
+    "                input_data[\"surface_pressure\"][i],\n",
+    "                input_data[\"shortwave_downward\"][i],\n",
+    "                input_data[\"longwave_downward\"][i],\n",
+    "                input_data[\"precipitation\"][i],\n",
+    "            )\n",
+    "        )\n",
     "\n",
     "    fid.close()"
    ]
@@ -63,11 +96,11 @@
     "def mkdir(foldername, cleanup=False):\n",
     "    if os.path.exists(foldername):\n",
     "        if cleanup:\n",
-    "            os.system('rm '+ os.path.join(foldername, '*'))\n",
+    "            os.system(\"rm \" + os.path.join(foldername, \"*\"))\n",
     "        pass\n",
     "    else:\n",
     "        os.makedirs(foldername)\n",
-    "        print(\"Creating \"+foldername)\n",
+    "        print(\"Creating \" + foldername)\n",
     "    return"
    ]
   },
@@ -79,12 +112,19 @@
    "outputs": [],
    "source": [
     "def regroup_365days(ncid, year=None):\n",
-    "    raw_data2 = ncid.convert_calendar('noleap')\n",
-    "    raw_data_group = raw_data2.groupby(raw_data2.time.dt.dayofyear).mean().to_dataframe()\n",
+    "    raw_data2 = ncid.convert_calendar(\"noleap\")\n",
+    "    raw_data_group = (\n",
+    "        raw_data2.groupby(raw_data2.time.dt.dayofyear).mean().to_dataframe()\n",
+    "    )\n",
     "    if year is None:\n",
-    "        raw_data_group.index = pd.date_range(ncid.time[0].values, periods=len(raw_data_group.air_temperature.values))\n",
+    "        raw_data_group.index = pd.date_range(\n",
+    "            ncid.time[0].values, periods=len(\n",
+    "                raw_data_group.air_temperature.values)\n",
+    "        )\n",
     "    else:\n",
-    "        raw_data_group.index = pd.date_range(str(year)+'-01-01', periods=len(raw_data_group.air_temperature.values))\n",
+    "        raw_data_group.index = pd.date_range(\n",
+    "            str(year) + \"-01-01\", periods=len(raw_data_group.air_temperature.values)\n",
+    "        )\n",
     "    return raw_data_group"
    ]
   },
@@ -95,14 +135,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Sitename = 'Barrow'\n",
+    "Sitename = \"Barrow\"\n",
     "\n",
     "rh_const = 80\n",
     "ws_const = 4.0\n",
     "ps_const = 101000\n",
     "\n",
-    "freq  = '2D'\n",
-    "first = '06-16' #'05-18'\n",
+    "freq = \"2D\"\n",
+    "first = \"06-16\"  # '05-18'\n",
     "# last  = '09-28'\n",
     "# dateoff  = '0D'"
    ]
@@ -114,9 +154,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#==================\n",
+    "# ==================\n",
     "\n",
-    "dump_t365 = np.arange(1,366)\n",
+    "dump_t365 = np.arange(1, 366)\n",
     "\n",
     "tas = -9 + 15.0 * np.sin(2 * np.pi * (dump_t365 + 260) / 365) + 273.15\n",
     "\n",
@@ -124,36 +164,37 @@
     "\n",
     "# ----\n",
     "\n",
-    "rsds = 115 + 221/2 * np.sin(2 * np.pi * (dump_t365 + 260) / 365)\n",
+    "rsds = 115 + 221 / 2 * np.sin(2 * np.pi * (dump_t365 + 260) / 365)\n",
     "\n",
     "# ----\n",
     "\n",
-    "rh = rh_const/100 + dump_t365 * 0\n",
+    "rh = rh_const / 100 + dump_t365 * 0\n",
     "wdsp = ws_const + dump_t365 * 0\n",
     "\n",
     "# ----\n",
     "\n",
-    "n_snow_days = sum(tas <=273.15)\n",
-    "n_rain_days = sum(tas >273.15)\n",
+    "n_snow_days = sum(tas <= 273.15)\n",
+    "n_rain_days = sum(tas > 273.15)\n",
     "\n",
-    "idx_snw_days = tas * 0.0 #[spinup_data['air_temperature']<273.15]\n",
+    "idx_snw_days = tas * 0.0  # [spinup_data['air_temperature']<273.15]\n",
     "\n",
-    "idx_snw_days[tas <=273.15] = 5 /86400 / n_snow_days \n",
+    "idx_snw_days[tas <= 273.15] = 5 / 86400 / n_snow_days\n",
     "\n",
-    "idx_rain_days = tas * 0.0 #[spinup_data['air_temperature']<273.15]\n",
+    "idx_rain_days = tas * 0.0  # [spinup_data['air_temperature']<273.15]\n",
     "\n",
-    "idx_rain_days[tas >273.15] = 60 /86400 / n_snow_days\n",
+    "idx_rain_days[tas > 273.15] = 60 / 86400 / n_snow_days\n",
     "\n",
     "# ----\n",
     "\n",
     "# tdew = 243.5*(np.log(rh)+((17.67*(tas - 273.15))/(243.5+tas - 273.15)))/(17.67-np.log(rh)-((17.67*(tas-273.15))/(243.5+tas - 273.15)))\n",
     "# evap = 10.0 ** (11.40 - 2353.0 / (tdew + 273.15))\n",
     "\n",
-    "evap = rh * 611.2 * np.exp(17.67*(tas-273.15)/(tas-29.65))\n",
+    "evap = rh * 611.2 * np.exp(17.67 * (tas - 273.15) / (tas - 29.65))\n",
     "\n",
     "# svp = 611.2*exp(17.67*(temperature-273.15)/(temperature-29.65))\n",
     "\n",
-    "rlds = 1.08 * (1 - np.exp(-(0.01*evap)**(tas / 2016))) * 5.670676E-8 * tas**4\n",
+    "rlds = 1.08 * (1 - np.exp(-((0.01 * evap) ** (tas / 2016)))) * \\\n",
+    "    5.670676e-8 * tas**4\n",
     "\n",
     "# ----\n",
     "\n",
@@ -165,7 +206,7 @@
     "# plt.plot(dump_t365, rlds)\n",
     "\n",
     "\n",
-    "print(idx_rain_days.sum()*86400, idx_snw_days.sum()*86400)\n",
+    "print(idx_rain_days.sum() * 86400, idx_snw_days.sum() * 86400)\n",
     "\n",
     "print(rsds.min())"
    ]
@@ -177,17 +218,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2 = pd.DataFrame(index = pd.date_range('1998-01-01', '1998-12-31'), columns = ['TAS','RSDS','RH','WSPD','SNOW','RAIN','PREC'])\n",
+    "df2 = pd.DataFrame(\n",
+    "    index=pd.date_range(\"1998-01-01\", \"1998-12-31\"),\n",
+    "    columns=[\"TAS\", \"RSDS\", \"RH\", \"WSPD\", \"SNOW\", \"RAIN\", \"PREC\"],\n",
+    ")\n",
     "\n",
-    "df2['air_temperature'] = tas.copy()\n",
-    "df2['shortwave_downward'] = rsds.copy()\n",
-    "df2['longwave_downward'] = rlds.copy()\n",
-    "df2['relative_humidity'] = rh_const + 0.0\n",
-    "df2['wind_speed'] = ws_const + 0.0\n",
-    "df2['surface_pressure'] = ps_const + 0.0\n",
-    "df2['SNOW'] = idx_snw_days.copy() * 86400\n",
+    "df2[\"air_temperature\"] = tas.copy()\n",
+    "df2[\"shortwave_downward\"] = rsds.copy()\n",
+    "df2[\"longwave_downward\"] = rlds.copy()\n",
+    "df2[\"relative_humidity\"] = rh_const + 0.0\n",
+    "df2[\"wind_speed\"] = ws_const + 0.0\n",
+    "df2[\"surface_pressure\"] = ps_const + 0.0\n",
+    "df2[\"SNOW\"] = idx_snw_days.copy() * 86400\n",
     "# df['RAIN'] = idx_rain_days.copy() / 1000\n",
-    "df2['precipitation'] = idx_snw_days * 86400 + idx_rain_days * 86400\n",
+    "df2[\"precipitation\"] = idx_snw_days * 86400 + idx_rain_days * 86400\n",
     "\n",
     "# >>> Following lines are to insert 12-31 in the beginning >>>\n",
     "\n",
@@ -199,7 +243,7 @@
     "    dump1232.name = pd.to_datetime(dump1232.name) - timedelta(days=365)\n",
     "    dump1232\n",
     "\n",
-    "    df2 = pd.concat([dump1232.to_frame().T, df2]) \n",
+    "    df2 = pd.concat([dump1232.to_frame().T, df2])\n",
     "\n",
     "# <<< END <<<\n",
     "\n",
@@ -215,53 +259,24 @@
    "source": [
     "# soil_thickness = np.array([0.01, 0.01, 0.02, 0.02, 0.02, 0.02, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.2, 0.3, 0.4, 0.4, 0.8, 0.8, 1, 1, 1, 1, 1, 1, 2, 2, 3, 3, 10, 10, 10])\n",
     "\n",
-    "soil_thickness = np.loadtxt('soil_thickness.dat')\n",
+    "soil_thickness = np.loadtxt(\"soil_thickness.dat\")\n",
     "\n",
     "cum_soil_thickness = np.cumsum(soil_thickness)\n",
     "\n",
-    "soil_nodes = soil_thickness + 0.\n",
+    "soil_nodes = soil_thickness + 0.0\n",
     "\n",
     "for i, d0 in enumerate(soil_thickness):\n",
     "\n",
-    "    if i ==0:\n",
-    "        soil_nodes[i] = np.round(d0 / 2., 5)\n",
+    "    if i == 0:\n",
+    "        soil_nodes[i] = np.round(d0 / 2.0, 5)\n",
     "    else:\n",
-    "        soil_nodes[i] =  np.round(cum_soil_thickness[i-1] + 0.5*(soil_thickness[i]), 5)\n",
+    "        soil_nodes[i] = np.round(\n",
+    "            cum_soil_thickness[i - 1] + 0.5 * (soil_thickness[i]), 5\n",
+    "        )\n",
     "\n",
     "print(len(soil_thickness), sum(soil_thickness))\n",
     "\n",
     "# soil_nodes.tolist()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f3397649-d1d2-45b1-9e50-9add14cc7ec5",
-   "metadata": {},
-   "source": [
-    "default_met_namelist = f90nml.read('README.met.namelist')\n",
-    "\n",
-    "loc_dict  = {'vegetation_category': 7,\n",
-    "             'soil_category': 13,\n",
-    "             'deep_soil_temperature':273.15-9,\n",
-    "             'latitude':71.2,\n",
-    "             'longitude': -156.25,\n",
-    "             'elevation':0,\n",
-    "             'nsoil': len(soil_thickness),\n",
-    "             'filename_met': 'met_data.dat'}\n",
-    "\n",
-    "ini_dict = {\n",
-    "             'soil_layer_thickness': soil_thickness.tolist(),\n",
-    "             'soil_layer_nodes': soil_nodes.tolist(),\n",
-    "             'soil_temperature': (-9 +273.15 + soil_thickness * 0.).tolist(), # set initial soil temperature profile ...\n",
-    "             'soil_moisture':  (0.45 + soil_thickness * 0.).tolist() # set initial soil moisture profile ...\n",
-    "}\n",
-    "\n",
-    "default_met_namelist['location'].update(loc_dict)\n",
-    "default_met_namelist['initial'].update(ini_dict)\n",
-    "\n",
-    "# default_namelist.write('namelist.met', force = True)\n",
-    "\n",
-    "print(default_met_namelist['initial']['soil_layer_nodes'])"
    ]
   },
   {
@@ -271,24 +286,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "default_namelist = f90nml.read('README.namelist')\n",
+    "default_namelist = f90nml.read(\"README.namelist\")\n",
     "\n",
-    "new_namelist = {'latitude':71.2,\n",
-    "             'longitude': -156.25,\n",
-    "             'soil_type_index':8, 'vegetation_type_index': 3,\n",
-    "             'startdate':'199801010800', 'enddate':'199812310800',\n",
-    "             'forcing_timestep': 86400, \n",
-    "                'noahlsm_timestep': 3600,\n",
-    "                'deep_soil_temperature': -9 + 273.15,\n",
-    "                'Soil_layer_thickness': soil_thickness.tolist(),\n",
-    "                'soil_temperature' : (np.zeros(len(soil_thickness)) + 264.15).tolist(),\n",
-    "                'soil_moisture' : (np.zeros(len(soil_thickness)) + 0.45).tolist(),\n",
-    "                'soil_liquid' : (np.zeros(len(soil_thickness)) + 0.15).tolist()\n",
-    "                }\n",
+    "new_namelist = {\n",
+    "    \"latitude\": 71.2,\n",
+    "    \"longitude\": -156.25,\n",
+    "    \"soil_type_index\": 8,\n",
+    "    \"vegetation_type_index\": 3,\n",
+    "    \"startdate\": \"199801010800\",\n",
+    "    \"enddate\": \"199812310800\",\n",
+    "    \"Skin_Temperature\": 263.00,\n",
+    "    \"canopy_water\": 0,\n",
+    "    \"forcing_timestep\": 86400,\n",
+    "    \"noahlsm_timestep\": 1800,\n",
+    "    \"deep_soil_temperature\": -9 + 273.15,\n",
+    "    \"Soil_layer_thickness\": soil_thickness.tolist(),\n",
+    "    \"soil_temperature\": (np.zeros(len(soil_thickness)) + 264.15).tolist(),\n",
+    "    \"soil_moisture\": (np.zeros(len(soil_thickness)) + 0.35).tolist(),\n",
+    "    \"soil_liquid\": (np.zeros(len(soil_thickness)) + 0.05).tolist(),\n",
+    "}\n",
     "\n",
-    "default_namelist['METADATA_NAMELIST'].update(new_namelist)\n",
+    "default_namelist[\"METADATA_NAMELIST\"].update(new_namelist)\n",
     "\n",
-    "default_namelist.write(os.path.join('namelist.noahmp11'), force=True)\n",
+    "default_namelist.write(os.path.join(\"namelist.noahmp11\"), force=True)\n",
     "\n",
     "default_namelist"
    ]
@@ -300,34 +320,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fid = open('namelist.noahmp11','a')\n",
+    "fid = open(\"namelist.noahmp11\", \"a\")\n",
     "\n",
-    "fid.write('-'*130+'\\n')\n",
+    "fid.write(\"-\" * 130 + \"\\n\")\n",
     "\n",
-    "fid.write('{:^17s}|{:^12s}|{:^12s}|{:^10s}|{:^10s}|{:^11s}|{:^11s}|{:^15s}\\n'.format('date/time','windspeed','temperature','humidity','pressure','shortwave','longwave','precipitation'))\n",
+    "fid.write(\n",
+    "    \"{:^17s}|{:^12s}|{:^12s}|{:^10s}|{:^10s}|{:^11s}|{:^11s}|{:^15s}\\n\".format(\n",
+    "        \"date/time\",\n",
+    "        \"windspeed\",\n",
+    "        \"temperature\",\n",
+    "        \"humidity\",\n",
+    "        \"pressure\",\n",
+    "        \"shortwave\",\n",
+    "        \"longwave\",\n",
+    "        \"precipitation\",\n",
+    "    )\n",
+    ")\n",
     "\n",
-    "fid.write('{:^17s}|{:^12s}|{:^12s}|{:^10s}|{:^10s}|{:^11s}|{:^11s}|{:^15s}\\n'.format('yyyy mm dd hh mi','m s{-1}','K',' %','Pa','W m{-2}','W m{-2}','mm d{-1}'))\n",
+    "fid.write(\n",
+    "    \"{:^17s}|{:^12s}|{:^12s}|{:^10s}|{:^10s}|{:^11s}|{:^11s}|{:^15s}\\n\".format(\n",
+    "        \"yyyy mm dd hh mi\", \"m s{-1}\", \"K\", \" %\", \"Pa\", \"W m{-2}\", \"W m{-2}\", \"mm d{-1}\"\n",
+    "    )\n",
+    ")\n",
     "\n",
-    "fid.write('-'*130+'\\n')\n",
+    "fid.write(\"-\" * 130 + \"\\n\")\n",
     "\n",
-    "fid.write('<Forcing>\\n')\n",
+    "fid.write(\"<Forcing>\\n\")\n",
     "\n",
     "for i, date0 in enumerate(input_data.index):\n",
-    "        \n",
-    "    # print(i, date0.year)\n",
-    "        \n",
-    "    fid.write('{:4d} {:02d} {:02d} {:02d} {:02d} {:^17.10f} {:^17.10f} {:^17.10f} {:^17.10f} {:^17.10f} {:^17.10f} {:^17.10f} {:^17.10f}\\n'.format(date0.year, date0.month, date0.day, date0.hour+8, date0.minute, \n",
-    "                                                                        input_data['wind_speed'][i], \n",
-    "                                                                        0,\n",
-    "                                                                        input_data['air_temperature'][i],\n",
-    "                                                                        input_data['relative_humidity'][i],\n",
-    "                                                                        input_data['surface_pressure'][i]/100,\n",
-    "                                                                        input_data['shortwave_downward'][i],\n",
-    "                                                                        input_data['longwave_downward'][i],\n",
-    "                                                                        input_data['precipitation'][i]\n",
-    "                                                                        ))\n",
     "\n",
-    "fid.close()\n"
+    "    # print(i, date0.year)\n",
+    "\n",
+    "    fid.write(\n",
+    "        \"{:4d} {:02d} {:02d} {:02d} {:02d} {:^17.10f} {:^17.10f} {:^17.10f} {:^17.10f} {:^17.10f} {:^17.10f} {:^17.10f} {:^17.10f}\\n\".format(\n",
+    "            date0.year,\n",
+    "            date0.month,\n",
+    "            date0.day,\n",
+    "            date0.hour + 8,\n",
+    "            date0.minute,\n",
+    "            input_data[\"wind_speed\"][i],\n",
+    "            0,\n",
+    "            input_data[\"air_temperature\"][i],\n",
+    "            input_data[\"relative_humidity\"][i],\n",
+    "            input_data[\"surface_pressure\"][i] / 100,\n",
+    "            input_data[\"shortwave_downward\"][i],\n",
+    "            input_data[\"longwave_downward\"][i],\n",
+    "            input_data[\"precipitation\"][i] * 0.0,\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "fid.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a11ff3da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.system(\"./src/driver.exe namelist.noahmp11\")"
    ]
   }
  ],
