--- a/Make_namelist.ipynb
+++ b/Make_namelist.ipynb
@@ -137,12 +137,12 @@
    "source": [
     "Sitename = \"Barrow\"\n",
     "\n",
-    "rh_const = 80\n",
+    "rh_const = 50\n",
     "ws_const = 4.0\n",
     "ps_const = 101000\n",
-    "\n",
-    "freq = \"2D\"\n",
-    "first = \"06-16\"  # '05-18'\n",
+    "# \n",
+    "# freq = \"2D\"\n",
+    "# first = \"06-16\"   # '05-18'\n",
     "# last  = '09-28'\n",
     "# dateoff  = '0D'"
    ]
@@ -156,15 +156,17 @@
    "source": [
     "# ==================\n",
     "\n",
+    "phase_shift = 90\n",
+    "\n",
     "dump_t365 = np.arange(1, 366)\n",
     "\n",
-    "tas = -9 + 15.0 * np.sin(2 * np.pi * (dump_t365 + 260) / 365) + 273.15\n",
+    "tas = -9 + 15.0 * np.sin(2 * np.pi * (dump_t365 + phase_shift) / 365) + 273.15\n",
     "\n",
     "# spinup_data['air_temperature'] = tas + 273.15\n",
     "\n",
     "# ----\n",
     "\n",
-    "rsds = 115 + 221 / 2 * np.sin(2 * np.pi * (dump_t365 + 260) / 365)\n",
+    "rsds = 115 + 221 / 2 * np.sin(2 * np.pi * (dump_t365 + phase_shift) / 365)\n",
     "\n",
     "# ----\n",
     "\n",
@@ -219,7 +221,7 @@
    "outputs": [],
    "source": [
     "df2 = pd.DataFrame(\n",
-    "    index=pd.date_range(\"1998-01-01\", \"1998-12-31\"),\n",
+    "    index=pd.date_range(\"1998-07-01\", \"1999-06-30\"),\n",
     "    columns=[\"TAS\", \"RSDS\", \"RH\", \"WSPD\", \"SNOW\", \"RAIN\", \"PREC\"],\n",
     ")\n",
     "\n",
@@ -291,26 +293,26 @@
     "new_namelist = {\n",
     "    \"latitude\": 71.2,\n",
     "    \"longitude\": -156.25,\n",
-    "    \"soil_type_index\": 8,\n",
+    "    \"soil_type_index\": 13,\n",
     "    \"vegetation_type_index\": 3,\n",
-    "    \"startdate\": \"199801010800\",\n",
-    "    \"enddate\": \"199812310800\",\n",
-    "    \"Skin_Temperature\": 263.00,\n",
-    "    \"canopy_water\": 0,\n",
+    "    \"startdate\": \"199807010000\",\n",
+    "    \"enddate\": \"199906300000\",\n",
+    "    \"Skin_Temperature\": 279.00,\n",
+    "    \"canopy_water\": 0.1,\n",
     "    \"forcing_timestep\": 86400,\n",
-    "    \"noahlsm_timestep\": 1800,\n",
+    "    \"noahlsm_timestep\": 600,\n",
     "    \"deep_soil_temperature\": -9 + 273.15,\n",
     "    \"Soil_layer_thickness\": soil_thickness.tolist(),\n",
-    "    \"soil_temperature\": (np.zeros(len(soil_thickness)) + 264.15).tolist(),\n",
-    "    \"soil_moisture\": (np.zeros(len(soil_thickness)) + 0.35).tolist(),\n",
-    "    \"soil_liquid\": (np.zeros(len(soil_thickness)) + 0.05).tolist(),\n",
+    "    \"soil_temperature\": (np.zeros(len(soil_thickness)) + 275.15).tolist(),\n",
+    "    \"soil_moisture\": (np.zeros(len(soil_thickness)) + 0.55).tolist(),\n",
+    "    \"soil_liquid\": (np.zeros(len(soil_thickness)) + 0.5).tolist(),\n",
     "}\n",
     "\n",
     "default_namelist[\"METADATA_NAMELIST\"].update(new_namelist)\n",
     "\n",
     "default_namelist.write(os.path.join(\"namelist.noahmp11\"), force=True)\n",
     "\n",
-    "default_namelist"
+    "# default_namelist"
    ]
   },
   {
@@ -356,7 +358,7 @@
     "            date0.year,\n",
     "            date0.month,\n",
     "            date0.day,\n",
-    "            date0.hour + 8,\n",
+    "            date0.hour,\n",
     "            date0.minute,\n",
     "            input_data[\"wind_speed\"][i],\n",
     "            0,\n",
@@ -365,7 +367,7 @@
     "            input_data[\"surface_pressure\"][i] / 100,\n",
     "            input_data[\"shortwave_downward\"][i],\n",
     "            input_data[\"longwave_downward\"][i],\n",
-    "            input_data[\"precipitation\"][i] * 0.0,\n",
+    "            input_data[\"precipitation\"][i] / 86400,\n",
     "        )\n",
     "    )\n",
     "\n",
